<resources>
    <string name="app_name">DemoProject</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="login_into_your_account">Login into your account</string>
    <string name="mpin">MPIN</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="submit">Submit</string>
    <string name="search_in_indore_madhya_pradesh">Search in indore,Madhya Pradesh</string>
</resources>