<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <data>
        <variable
            name="viewmodel"
            type="com.example.demoproject.AuthViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginBottom="@dimen/_50sdp"
                    android:layout_weight="1">


                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_130sdp"
                        android:src="@drawable/rounded_square" />

                    <ImageView
                        android:layout_width="@dimen/_25sdp"
                        android:layout_height="@dimen/_25sdp"
                        android:layout_margin="@dimen/_10sdp"
                        android:padding="@dimen/_2sdp"
                        android:src="@drawable/back" />

                    <ImageView
                        android:id="@+id/iv_profile"
                        android:layout_width="@dimen/_150sdp"
                        android:layout_height="@dimen/_150sdp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="@dimen/_90sdp"
                        android:src="@drawable/man" />

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_margin="@dimen/_15sdp"
                    android:layout_weight="2"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/login_into_your_account"
                        android:textColor="@color/orange"
                        android:textSize="@dimen/_15sdp"
                        android:textStyle="bold" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:background="@color/dark_gray"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:padding="@dimen/_5sdp">

                        <com.rilixtech.widget.countrycodepicker.CountryCodePicker
                            android:id="@+id/ccp"
                            
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/_5sdp"
                            app:ccp_hideNameCode="true" />

                        <ImageView
                            android:layout_width="@dimen/_20sdp"
                            android:layout_height="@dimen/_20sdp"
                            android:padding="@dimen/_3sdp"
                            android:src="@drawable/call"
                            android:tint="#9E9E9E" />

                        <EditText
                            android:text="@={viewmodel.email}"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/_5sdp"
                            android:background="@null"
                            android:hint="@string/mobile_number"
                            android:inputType="number"
                            android:textSize="@dimen/_11sdp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:background="@color/dark_gray"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:padding="@dimen/_5sdp">

                        <ImageView
                            android:layout_width="@dimen/_20sdp"
                            android:layout_height="@dimen/_20sdp"
                            android:layout_margin="@dimen/_5sdp"
                            android:padding="@dimen/_3sdp"
                            android:src="@drawable/lock"
                            android:tint="#9E9E9E" />

                        <EditText
                            android:text="@={viewmodel.password}"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/_5sdp"
                            android:layout_weight="1"
                            android:background="@null"
                            android:hint="@string/mpin"
                            android:inputType="textPassword"
                            android:textSize="@dimen/_11sdp" />

                        <ImageView
                            android:layout_width="@dimen/_20sdp"
                            android:layout_height="@dimen/_20sdp"
                            android:padding="@dimen/_3sdp"
                            android:src="@drawable/pass_see"
                            android:tint="#9E9E9E" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/tv_forgot_pass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:gravity="end"
                        android:text="Forgot MPIN/ Change Number"
                        android:textColor="@color/orange"
                        android:textSize="@dimen/_12sdp" />

                    <TextView
                        android:id="@+id/tv_signin"
                        android:onClick="@{viewmodel::onLoginButtonClick}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_30sdp"
                        android:layout_marginTop="@dimen/_30sdp"
                        android:layout_marginRight="@dimen/_30sdp"
                        android:layout_marginBottom="@dimen/_10sdp"
                        android:background="@drawable/button_back"
                        android:gravity="center"
                        android:padding="@dimen/_10sdp"
                        android:text="@string/sign_in"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_15sdp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/don_t_have_an_account"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/tv_sign_up"
                            android:onClick="@={viewmodel.onSignupClick}"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/_5sdp"
                            android:text="@string/sign_up"
                            android:textColor="@color/orange" />
                    </LinearLayout>


                </LinearLayout>
            </LinearLayout>

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="gone" />

        </RelativeLayout>


    </ScrollView>

</layout>