<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    android:scrollbars="none"
    tools:context=".SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="-5dp"
            android:layout_marginBottom="@dimen/_50sdp"
            android:layout_weight="1">


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_160sdp"
                android:src="@drawable/signup_bg" />

            <ImageView
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_margin="@dimen/_10sdp"
                android:padding="@dimen/_2sdp"
                android:src="@drawable/back" />

            <ImageView
                android:id="@+id/iv_profile"
                android:layout_width="@dimen/_90sdp"
                android:layout_height="@dimen/_90sdp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_80sdp"
                android:src="@drawable/man" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/_15sdp"
            android:layout_weight="4"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="First Name"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp" />


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:text="Last Name"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/dark_gray"
                    android:padding="@dimen/_6sdp">

                    <ImageView
                        android:layout_width="@dimen/_25sdp"
                        android:layout_height="@dimen/_25sdp"
                        android:padding="@dimen/_4sdp"
                        android:src="@drawable/person" />

                    <EditText
                        android:hint="First Name"
                        android:textSize="@dimen/_12sdp"
                        android:singleLine="true"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null" />
                </LinearLayout>

                <LinearLayout
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:background="@color/dark_gray"
                    android:padding="@dimen/_6sdp">

                    <ImageView
                        android:layout_width="@dimen/_25sdp"
                        android:layout_height="@dimen/_25sdp"
                        android:padding="@dimen/_4sdp"
                        android:src="@drawable/person" />

                    <EditText
                        android:hint="Last Name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/_12sdp"
                        android:singleLine="true"
                        android:background="@null" />
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="Gender"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

<!--                <LinearLayout-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:orientation="vertical">-->

<!--                    <LinearLayout-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:orientation="horizontal">-->

                        <RadioButton
                            android:id="@+id/rb_male"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:checked="true"
                            android:text="Male"
                            android:textSize="@dimen/_12sdp" />

                        <RadioButton
                            android:id="@+id/rb_female"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="Female"
                            android:textSize="@dimen/_12sdp" />

                        <RadioButton
                            android:id="@+id/rb_other"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="Other"
                            android:textSize="@dimen/_12sdp" />
<!--                    </LinearLayout>-->

<!--                    <LinearLayout-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:orientation="horizontal">-->

                        <RadioButton
                            android:id="@+id/rb_transgender"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="Transgender"
                            android:textSize="@dimen/_12sdp" />

                        <RadioButton
                            android:id="@+id/rb_non_binary"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="Non-Binary"
                            android:textSize="@dimen/_12sdp" />

<!--                        <View-->
<!--                            android:layout_width="0dp"-->
<!--                            android:layout_height="@dimen/_1sdp"-->
<!--                            android:layout_weight="1" />-->

<!--                    </LinearLayout>-->

<!--                </LinearLayout>-->

            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="Email"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

            <LinearLayout
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/dark_gray"
                android:padding="@dimen/_6sdp">

                <ImageView
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:padding="@dimen/_4sdp"
                    android:src="@drawable/email" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_12sdp"
                    android:hint="Email"
                    android:singleLine="true"
                    android:background="@null" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="Create 4 digit password (MPIN)"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:background="@color/dark_gray"
                    android:orientation="horizontal"
                    android:padding="@dimen/_6sdp">

                    <ImageView
                        android:layout_width="@dimen/_25sdp"
                        android:layout_height="@dimen/_25sdp"
                        android:padding="@dimen/_5sdp"
                        android:tint="#9E9E9E"
                        android:src="@drawable/lock" />

                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="@dimen/_12sdp"
                        android:singleLine="true"
                        android:background="@null"
                        android:hint="@string/mpin"
                        android:inputType="textPassword" />

                    <ImageView
                        android:layout_width="@dimen/_25sdp"
                        android:layout_height="@dimen/_25sdp"
                        android:padding="@dimen/_4sdp"
                        android:src="@drawable/pass_see" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:background="@color/dark_gray"
                    android:orientation="horizontal"
                    android:padding="@dimen/_6sdp">

                    <ImageView
                        android:layout_width="@dimen/_25sdp"
                        android:layout_height="@dimen/_25sdp"
                        android:padding="@dimen/_5sdp"
                        android:tint="#9E9E9E"
                        android:src="@drawable/lock" />

                    <EditText
                        android:layout_width="0dp"
                        android:hint="Confirm MPIN"
                        android:layout_weight="1"
                        android:textSize="@dimen/_12sdp"
                        android:singleLine="true"
                        android:layout_height="wrap_content"
                        android:background="@null" />

                    <ImageView
                        android:layout_width="@dimen/_25sdp"
                        android:layout_height="@dimen/_25sdp"
                        android:padding="@dimen/_4sdp"
                        android:src="@drawable/pass_see" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/delivery_address"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@color/dark_gray"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/_5sdp">

                <ImageView
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:src="@drawable/location"
                    android:tint="#9E9E9E"
                    android:padding="@dimen/_3sdp" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:background="@null"
                    android:hint="@string/delivery_address"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textSize="@dimen/_12sdp" />

                <ImageView
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:src="@drawable/shooting"
                    android:tint="#9E9E9E"
                    android:padding="@dimen/_3sdp" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/mobile_number"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@color/dark_gray"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/_5sdp">

                <com.rilixtech.widget.countrycodepicker.CountryCodePicker
                    android:id="@+id/ccp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_5sdp"
                    app:ccp_hideNameCode="false" />

                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:padding="@dimen/_3sdp"
                    android:src="@drawable/call"
                    android:tint="#9E9E9E" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:background="@null"
                    android:hint="@string/mobile_number"
                    android:inputType="number"
                    android:singleLine="true"
                    android:textSize="@dimen/_12sdp" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_signin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_marginRight="@dimen/_30sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/button_back"
                android:gravity="center"
                android:padding="@dimen/_10sdp"
                android:text="@string/submit"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/_15sdp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/already_have_an_account"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:text="@string/sign_in"
                    android:textColor="@color/orange" />
            </LinearLayout>


        </LinearLayout>
    </LinearLayout>

</ScrollView>